fix nav links not clickable on safari

--- a/app/assets/stylesheets/map/hamburger.scss
+++ b/app/assets/stylesheets/map/hamburger.scss
@@ -2,6 +2,7 @@
   padding: 0 $map-fixed-offset;
   position: absolute;
   width: 100%;
+  z-index: $zindex-fixed + 2; // +2 so that the menu shows on top of the action buttons on small screens
 
   ul {
     width: 100%;
